cargo-features = ["strip"]

[package]
name = "rstatus"
version = "1.0.0"
edition = "2021"
description = "A small rust status updater"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rstatus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dependencies]
xcb = "0.10.1"
chrono = "0.4.19"
